Update parent POM and BOM for JDK 17 and major library updates (#61)
* Bump kiwi-parent from 2.0.20 to 3.0.1
* Bump kiwi-bom from 1.1.1 to 2.0.0
* Bump kiwi libraries to next major version
* Update build for JDK 17 and 20
* Fix Dropwizard package changes
* Refactor from javax to jakarta namespace for Jakarta EE 9
* JDK 17 cleanup: Replace collect(toList()) with toList()